# cad

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  package.json
docs/: api.md  errjournal.md
inc/: buffermesh.h  circarc.h  edge.h  face.h  geom.h  helper.h  lineseg.h  mox.h  ops.h  point.h  solid.h  vector.h  vertex.h  wire.h
src/: buffermesh.cpp  circarc.cpp  edge.cpp  face.cpp  geom.cpp  lineseg.cpp  mox.cpp  ops.cpp  point.cpp  solid.cpp  vector.cpp  vertex.cpp  wire.cpp
tests/: edge.js  face.js  fitter.js  lineseg.js  ops.js  point.js  tess.js  wire.js
